name:                rivet-autoimporter
version:             0.1.0.0
synopsis:            Database migration library; automatic importer.
description:         Please see README.md
homepage:            http://github.com/dbp/rivet
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable rivet-autoimporter
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5
               , directory
               , filepath
  ghc-options: -Wall
  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/dbp/rivet
