name:                rivet-core
version:             0.2.0.0
synopsis:            Database migration library; core functionality.
description:         Please see README.md
homepage:            http://github.com/dbp/rivet
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.Rivet
                     , Database.Rivet.Main
                     , Database.Rivet.V0
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite rivet-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rivet-core
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbp/rivet
